hw4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DQUOTE
    PRINT
    SQUOTE
    UMINUS

Grammar

Rule 0     S' -> print_smt
Rule 1     print_smt -> expression SEMICOLON
Rule 2     expression -> expression PLUS expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> expression TIMES expression
Rule 5     expression -> expression DIVIDE expression
Rule 6     expression -> expression POWER expression
Rule 7     expression -> expression DIV expression
Rule 8     expression -> expression MOD expression
Rule 9     expression -> expression IN expression
Rule 10    expression -> expression CONS expression
Rule 11    expression -> expression SMALLER expression
Rule 12    expression -> expression SMALLEROREQUAL expression
Rule 13    expression -> expression EQUAL expression
Rule 14    expression -> expression NOTEQUAL expression
Rule 15    expression -> expression BIGGER expression
Rule 16    expression -> expression BIGGEROREQUAL expression
Rule 17    expression -> expression AND expression
Rule 18    expression -> expression OR expression
Rule 19    expression -> NOT expression
Rule 20    expression -> MINUS expression
Rule 21    expression -> INDEXTUPLE expression expression
Rule 22    expression -> expression LSBRACKET expression RSBRACKET
Rule 23    expression -> factor
Rule 24    factor -> NUMBER
Rule 25    factor -> TRUE
Rule 26    factor -> FALSE
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> LPAREN expression COMMA tupexp RPAREN
Rule 29    tupexp -> expression COMMA tupexp
Rule 30    tupexp -> expression
Rule 31    expression -> LSBRACKET listexp RSBRACKET
Rule 32    expression -> LSBRACKET RSBRACKET
Rule 33    listexp -> expression
Rule 34    listexp -> listexp COMMA listexp
Rule 35    factor -> STRING

Terminals, with rules where they appear

AND                  : 17
BIGGER               : 15
BIGGEROREQUAL        : 16
COMMA                : 28 29 34
CONS                 : 10
DIV                  : 7
DIVIDE               : 5
DQUOTE               : 
EQUAL                : 13
FALSE                : 26
IN                   : 9
INDEXTUPLE           : 21
LPAREN               : 27 28
LSBRACKET            : 22 31 32
MINUS                : 3 20
MOD                  : 8
NOT                  : 19
NOTEQUAL             : 14
NUMBER               : 24
OR                   : 18
PLUS                 : 2
POWER                : 6
PRINT                : 
RPAREN               : 27 28
RSBRACKET            : 22 31 32
SEMICOLON            : 1
SMALLER              : 11
SMALLEROREQUAL       : 12
SQUOTE               : 
STRING               : 35
TIMES                : 4
TRUE                 : 25
UMINUS               : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 20 21 21 22 22 27 28 29 30 33
factor               : 23
listexp              : 31 34 34
print_smt            : 0
tupexp               : 28 29

Parsing method: LALR

state 0

    (0) S' -> . print_smt
    (1) print_smt -> . expression SEMICOLON
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    print_smt                      shift and go to state 1
    expression                     shift and go to state 2
    factor                         shift and go to state 7

state 1

    (0) S' -> print_smt .



state 2

    (1) print_smt -> expression . SEMICOLON
    (2) expression -> expression . PLUS expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . TIMES expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . POWER expression
    (7) expression -> expression . DIV expression
    (8) expression -> expression . MOD expression
    (9) expression -> expression . IN expression
    (10) expression -> expression . CONS expression
    (11) expression -> expression . SMALLER expression
    (12) expression -> expression . SMALLEROREQUAL expression
    (13) expression -> expression . EQUAL expression
    (14) expression -> expression . NOTEQUAL expression
    (15) expression -> expression . BIGGER expression
    (16) expression -> expression . BIGGEROREQUAL expression
    (17) expression -> expression . AND expression
    (18) expression -> expression . OR expression
    (22) expression -> expression . LSBRACKET expression RSBRACKET

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    POWER           shift and go to state 18
    DIV             shift and go to state 19
    MOD             shift and go to state 20
    IN              shift and go to state 21
    CONS            shift and go to state 22
    SMALLER         shift and go to state 23
    SMALLEROREQUAL  shift and go to state 24
    EQUAL           shift and go to state 25
    NOTEQUAL        shift and go to state 26
    BIGGER          shift and go to state 27
    BIGGEROREQUAL   shift and go to state 28
    AND             shift and go to state 29
    OR              shift and go to state 30
    LSBRACKET       shift and go to state 31


state 3

    (20) expression -> MINUS . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 32
    factor                         shift and go to state 7

state 4

    (19) expression -> NOT . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 33
    factor                         shift and go to state 7

state 5

    (21) expression -> INDEXTUPLE . expression expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 34
    factor                         shift and go to state 7

state 6

    (31) expression -> LSBRACKET . listexp RSBRACKET
    (32) expression -> LSBRACKET . RSBRACKET
    (33) listexp -> . expression
    (34) listexp -> . listexp COMMA listexp
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    RSBRACKET       shift and go to state 36
    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    listexp                        shift and go to state 35
    expression                     shift and go to state 37
    factor                         shift and go to state 7

state 7

    (23) expression -> factor .

    SEMICOLON       reduce using rule 23 (expression -> factor .)
    PLUS            reduce using rule 23 (expression -> factor .)
    MINUS           reduce using rule 23 (expression -> factor .)
    TIMES           reduce using rule 23 (expression -> factor .)
    DIVIDE          reduce using rule 23 (expression -> factor .)
    POWER           reduce using rule 23 (expression -> factor .)
    DIV             reduce using rule 23 (expression -> factor .)
    MOD             reduce using rule 23 (expression -> factor .)
    IN              reduce using rule 23 (expression -> factor .)
    CONS            reduce using rule 23 (expression -> factor .)
    SMALLER         reduce using rule 23 (expression -> factor .)
    SMALLEROREQUAL  reduce using rule 23 (expression -> factor .)
    EQUAL           reduce using rule 23 (expression -> factor .)
    NOTEQUAL        reduce using rule 23 (expression -> factor .)
    BIGGER          reduce using rule 23 (expression -> factor .)
    BIGGEROREQUAL   reduce using rule 23 (expression -> factor .)
    AND             reduce using rule 23 (expression -> factor .)
    OR              reduce using rule 23 (expression -> factor .)
    LSBRACKET       reduce using rule 23 (expression -> factor .)
    NOT             reduce using rule 23 (expression -> factor .)
    INDEXTUPLE      reduce using rule 23 (expression -> factor .)
    LPAREN          reduce using rule 23 (expression -> factor .)
    NUMBER          reduce using rule 23 (expression -> factor .)
    TRUE            reduce using rule 23 (expression -> factor .)
    FALSE           reduce using rule 23 (expression -> factor .)
    STRING          reduce using rule 23 (expression -> factor .)
    RSBRACKET       reduce using rule 23 (expression -> factor .)
    COMMA           reduce using rule 23 (expression -> factor .)
    RPAREN          reduce using rule 23 (expression -> factor .)


state 8

    (27) expression -> LPAREN . expression RPAREN
    (28) expression -> LPAREN . expression COMMA tupexp RPAREN
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 38
    factor                         shift and go to state 7

state 9

    (24) factor -> NUMBER .

    SEMICOLON       reduce using rule 24 (factor -> NUMBER .)
    PLUS            reduce using rule 24 (factor -> NUMBER .)
    MINUS           reduce using rule 24 (factor -> NUMBER .)
    TIMES           reduce using rule 24 (factor -> NUMBER .)
    DIVIDE          reduce using rule 24 (factor -> NUMBER .)
    POWER           reduce using rule 24 (factor -> NUMBER .)
    DIV             reduce using rule 24 (factor -> NUMBER .)
    MOD             reduce using rule 24 (factor -> NUMBER .)
    IN              reduce using rule 24 (factor -> NUMBER .)
    CONS            reduce using rule 24 (factor -> NUMBER .)
    SMALLER         reduce using rule 24 (factor -> NUMBER .)
    SMALLEROREQUAL  reduce using rule 24 (factor -> NUMBER .)
    EQUAL           reduce using rule 24 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 24 (factor -> NUMBER .)
    BIGGER          reduce using rule 24 (factor -> NUMBER .)
    BIGGEROREQUAL   reduce using rule 24 (factor -> NUMBER .)
    AND             reduce using rule 24 (factor -> NUMBER .)
    OR              reduce using rule 24 (factor -> NUMBER .)
    LSBRACKET       reduce using rule 24 (factor -> NUMBER .)
    NOT             reduce using rule 24 (factor -> NUMBER .)
    INDEXTUPLE      reduce using rule 24 (factor -> NUMBER .)
    LPAREN          reduce using rule 24 (factor -> NUMBER .)
    NUMBER          reduce using rule 24 (factor -> NUMBER .)
    TRUE            reduce using rule 24 (factor -> NUMBER .)
    FALSE           reduce using rule 24 (factor -> NUMBER .)
    STRING          reduce using rule 24 (factor -> NUMBER .)
    RSBRACKET       reduce using rule 24 (factor -> NUMBER .)
    COMMA           reduce using rule 24 (factor -> NUMBER .)
    RPAREN          reduce using rule 24 (factor -> NUMBER .)


state 10

    (25) factor -> TRUE .

    SEMICOLON       reduce using rule 25 (factor -> TRUE .)
    PLUS            reduce using rule 25 (factor -> TRUE .)
    MINUS           reduce using rule 25 (factor -> TRUE .)
    TIMES           reduce using rule 25 (factor -> TRUE .)
    DIVIDE          reduce using rule 25 (factor -> TRUE .)
    POWER           reduce using rule 25 (factor -> TRUE .)
    DIV             reduce using rule 25 (factor -> TRUE .)
    MOD             reduce using rule 25 (factor -> TRUE .)
    IN              reduce using rule 25 (factor -> TRUE .)
    CONS            reduce using rule 25 (factor -> TRUE .)
    SMALLER         reduce using rule 25 (factor -> TRUE .)
    SMALLEROREQUAL  reduce using rule 25 (factor -> TRUE .)
    EQUAL           reduce using rule 25 (factor -> TRUE .)
    NOTEQUAL        reduce using rule 25 (factor -> TRUE .)
    BIGGER          reduce using rule 25 (factor -> TRUE .)
    BIGGEROREQUAL   reduce using rule 25 (factor -> TRUE .)
    AND             reduce using rule 25 (factor -> TRUE .)
    OR              reduce using rule 25 (factor -> TRUE .)
    LSBRACKET       reduce using rule 25 (factor -> TRUE .)
    NOT             reduce using rule 25 (factor -> TRUE .)
    INDEXTUPLE      reduce using rule 25 (factor -> TRUE .)
    LPAREN          reduce using rule 25 (factor -> TRUE .)
    NUMBER          reduce using rule 25 (factor -> TRUE .)
    TRUE            reduce using rule 25 (factor -> TRUE .)
    FALSE           reduce using rule 25 (factor -> TRUE .)
    STRING          reduce using rule 25 (factor -> TRUE .)
    RSBRACKET       reduce using rule 25 (factor -> TRUE .)
    COMMA           reduce using rule 25 (factor -> TRUE .)
    RPAREN          reduce using rule 25 (factor -> TRUE .)


state 11

    (26) factor -> FALSE .

    SEMICOLON       reduce using rule 26 (factor -> FALSE .)
    PLUS            reduce using rule 26 (factor -> FALSE .)
    MINUS           reduce using rule 26 (factor -> FALSE .)
    TIMES           reduce using rule 26 (factor -> FALSE .)
    DIVIDE          reduce using rule 26 (factor -> FALSE .)
    POWER           reduce using rule 26 (factor -> FALSE .)
    DIV             reduce using rule 26 (factor -> FALSE .)
    MOD             reduce using rule 26 (factor -> FALSE .)
    IN              reduce using rule 26 (factor -> FALSE .)
    CONS            reduce using rule 26 (factor -> FALSE .)
    SMALLER         reduce using rule 26 (factor -> FALSE .)
    SMALLEROREQUAL  reduce using rule 26 (factor -> FALSE .)
    EQUAL           reduce using rule 26 (factor -> FALSE .)
    NOTEQUAL        reduce using rule 26 (factor -> FALSE .)
    BIGGER          reduce using rule 26 (factor -> FALSE .)
    BIGGEROREQUAL   reduce using rule 26 (factor -> FALSE .)
    AND             reduce using rule 26 (factor -> FALSE .)
    OR              reduce using rule 26 (factor -> FALSE .)
    LSBRACKET       reduce using rule 26 (factor -> FALSE .)
    NOT             reduce using rule 26 (factor -> FALSE .)
    INDEXTUPLE      reduce using rule 26 (factor -> FALSE .)
    LPAREN          reduce using rule 26 (factor -> FALSE .)
    NUMBER          reduce using rule 26 (factor -> FALSE .)
    TRUE            reduce using rule 26 (factor -> FALSE .)
    FALSE           reduce using rule 26 (factor -> FALSE .)
    STRING          reduce using rule 26 (factor -> FALSE .)
    RSBRACKET       reduce using rule 26 (factor -> FALSE .)
    COMMA           reduce using rule 26 (factor -> FALSE .)
    RPAREN          reduce using rule 26 (factor -> FALSE .)


state 12

    (35) factor -> STRING .

    SEMICOLON       reduce using rule 35 (factor -> STRING .)
    PLUS            reduce using rule 35 (factor -> STRING .)
    MINUS           reduce using rule 35 (factor -> STRING .)
    TIMES           reduce using rule 35 (factor -> STRING .)
    DIVIDE          reduce using rule 35 (factor -> STRING .)
    POWER           reduce using rule 35 (factor -> STRING .)
    DIV             reduce using rule 35 (factor -> STRING .)
    MOD             reduce using rule 35 (factor -> STRING .)
    IN              reduce using rule 35 (factor -> STRING .)
    CONS            reduce using rule 35 (factor -> STRING .)
    SMALLER         reduce using rule 35 (factor -> STRING .)
    SMALLEROREQUAL  reduce using rule 35 (factor -> STRING .)
    EQUAL           reduce using rule 35 (factor -> STRING .)
    NOTEQUAL        reduce using rule 35 (factor -> STRING .)
    BIGGER          reduce using rule 35 (factor -> STRING .)
    BIGGEROREQUAL   reduce using rule 35 (factor -> STRING .)
    AND             reduce using rule 35 (factor -> STRING .)
    OR              reduce using rule 35 (factor -> STRING .)
    LSBRACKET       reduce using rule 35 (factor -> STRING .)
    NOT             reduce using rule 35 (factor -> STRING .)
    INDEXTUPLE      reduce using rule 35 (factor -> STRING .)
    LPAREN          reduce using rule 35 (factor -> STRING .)
    NUMBER          reduce using rule 35 (factor -> STRING .)
    TRUE            reduce using rule 35 (factor -> STRING .)
    FALSE           reduce using rule 35 (factor -> STRING .)
    STRING          reduce using rule 35 (factor -> STRING .)
    RSBRACKET       reduce using rule 35 (factor -> STRING .)
    COMMA           reduce using rule 35 (factor -> STRING .)
    RPAREN          reduce using rule 35 (factor -> STRING .)


state 13

    (1) print_smt -> expression SEMICOLON .

    $end            reduce using rule 1 (print_smt -> expression SEMICOLON .)


state 14

    (2) expression -> expression PLUS . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 39
    factor                         shift and go to state 7

state 15

    (3) expression -> expression MINUS . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 40
    factor                         shift and go to state 7

state 16

    (4) expression -> expression TIMES . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 41
    factor                         shift and go to state 7

state 17

    (5) expression -> expression DIVIDE . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 42
    factor                         shift and go to state 7

state 18

    (6) expression -> expression POWER . expression
    (2) expression -> . expression PLUS expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression TIMES expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression POWER expression
    (7) expression -> . expression DIV expression
    (8) expression -> . expression MOD expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONS expression
    (11) expression -> . expression SMALLER expression
    (12) expression -> . expression SMALLEROREQUAL expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression BIGGER expression
    (16) expression -> . expression BIGGEROREQUAL expression
    (17) expression -> . expression AND expression
    (18) expression -> . expression OR expression
    (19) expression -> . NOT expression
    (20) expression -> . MINUS expression
    (21) expression -> . INDEXTUPLE expression expression
    (22) expression -> . expression LSBRACKET expression RSBRACKET
    (23) expression -> . factor
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . LPAREN expression COMMA tupexp RPAREN
    (31) expression -> . LSBRACKET listexp RSBRACKET
    (32) expression -> . LSBRACKET RSBRACKET
    (24) factor -> . NUMBER
    (25) factor -> . TRUE
    (26) factor -> . FALSE
    (35) factor -> . STRING

    NOT             shift and go to state 4
    MINUS           shift and go to state 3
    INDEXTUPLE      shift and go to state 5
    LPAREN          shift and go to state 8
    LSBRACKET       shift and go to state 6
    NUMBER          shift and go to state 9
    TRUE            shift and go to state 10
    FALSE           shift and go to state 11
    STRING          shift and go to state 12

    expression                     shift and go to state 43
    factor                         shift and go to state 7

state 19
